--- a/xjj.html
+++ b/xjj.html
@@ -51,23 +51,10 @@ document.addEventListener("DOMContentLoaded", eval(contentLoaded), false);
 window.addEventListener("online", eval(contentLoaded), false);
 window.addEventListener("offline", eval(contentLoaded), false);
 player = document.getElementById("myVideo");
-player.addEventListener("dblclick", function() {
-    fba.parseLazyRule($$$().lazyRule(() => {
-        var t = fetchPC('hiker://files/cache/lunbo.txt');;
-        if (t == '1') {
-            writeFile('hiker://files/cache/lunbo.txt', '0');
-            unRegisterTask('zhuye');
-            toast('已停止视频轮播~');
-        } else if (t == '0') {
-            writeFile('hiker://files/cache/lunbo.txt', '1');
-            toast('已开启视频轮播~');
+player.addEventListener("lclick", function() {
+   
             refreshPage();
-        } else if (t == '') {
-            writeFile('hiker://files/cache/lunbo.txt', '0');
-            unRegisterTask('zhuye');
-            toast('已停止视频轮播~');
-        }
-    }));
+        
 });
 const LONG_PRESS_DURATION = 1000;
 let isTouching = false;
@@ -88,11 +75,9 @@ function setupLongPress(player, callback,) {
     });
 }
 setupLongPress(player, function() {
-    fba.parseLazyRule($$$().lazyRule((player) => {
-        writeFile('hiker://files/yuan/xx.txt', '0');
-            toast('切换到图片轮播~');
+   
             refreshPage();
-    }));
+
 });
 eval(fy_bridge_app.getInternalJs());
 window.request = window.request00 || window.request;    
@@ -100,8 +85,8 @@ $(document).ready(function () {
     var y = Math.floor(Math.random() * 32) + 1
     url = 'http://api.yujn.cn/api/xjj.php?type=video';
     player = document.getElementById("myVideo");
-    player.style.Width = '1000px';
-    player.style.height = '2000px';
+    player.style.Width = '500px';
+    player.style.height = '1000px';
     function players() {
         $.get(url, function(data, status) {
             if (status == status) {
