--- a/xjj.html
+++ b/xjj.html
@@ -91,7 +91,7 @@ $(document).ready(function () {
         $.get(url, function(data, status) {
             if (status == status) {
                 var x = Math.floor(Math.random() * 16);
-                url = 'http://api.yujn.cn/api/xjj.php?type=video';
+                url = 'https://p.txqq.pro/api/girls?limit=20/girl?limit=10';
                 $.get(url, function(data, status) {
                     if (status == status) {           
                         data=data.match(/(https.*?)"/)[1];
